--- a/Pendu/Pendu.csproj
+++ b/Pendu/Pendu.csproj
@@ -12,19 +12,6 @@
     <None Remove="Images\Pendu4.png" />
     <None Remove="Images\Pendu5.png" />
     <None Remove="Images\Pendu7.png" />
-    <None Remove="son\fond.mp3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="son\fond.mp3">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="son\gagne.mp3">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="son\perd.mp3">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +36,22 @@
     <Resource Include="Images\Pendu7.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="son\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="son\fond.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="son\gagne.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="son\perd.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
